# oidckit

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
oidckit/: crypto.py  excs.py  objects.py  provider.py  routines.py
tests/: test_smoke.py
