[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oidckit"
dynamic = ["version"]
description = "Unobtrusive pluggable OpenID Connect"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Valohai" },
]
maintainers = [
    { name = "Aarni Koskela", email = "akx@iki.fi" },
]
dependencies = [
    "josepy>=2.0.0",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/valohai/oidckit"

[tool.hatch.version]
path = "oidckit/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/oidckit",
]

[tool.ruff.lint]
ignore = [
    "E501",
]
select = [
    "B",
    "COM",
    "E",
    "F",
    "I",
    "TID",
    "W",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
